# use_aws_mcp_server

./: README.md  pyproject.toml
src/: use_aws.py
