[project]
name = "use_aws_mcp_server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "moritalous"},
]
dependencies = [
    "strands-agents-tools>=0.1.1",
]

[project.scripts]
use_aws_mcp_server = "use_aws:main"
